# hustle-coach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile.cranecloud  ETHICS.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: auth.py  business_doctor.py  business_plan.py  cache.py  corrective_rag.py  funding.py  guardrails.py  i18n.py  indexer.py  llm.py  main.py  market_intel.py  models.py  query.py  retriever.py  service.py  sunbird.py  tools.py
backend/app/agents/: state.py  supervisor.py
backend/tests/: test_api.py  test_auth.py  test_business_doctor.py  test_funding.py  test_guardrails.py  test_integration.py  test_market_intel.py  test_service.py  test_supervisor.py  test_tools.py
docs/: 01-architecture.md  02-backend-setup.md  03-frontend-setup.md  04-agentic-system.md  05-llm-configuration.md  08-security-guardrails.md  crane-cloud-deployment.md  voice-system.md
frontend/: Dockerfile  eslint.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: manifest.json  offline.html  sw.js
knowledge-base/: cooperative-models.json  funding-sources.json
knowledge-base/business-models/: agro-processing.json  boda-boda.json  boda-repair.json  brick-making.json  car-wash.json  carpentry.json  crafts-pottery.json  digital-economy-guide.json  digital-services.json  ecommerce-reselling.json  electrician.json  event-planning.json  fish-farming.json  juice-making.json  mitumba-clothing.json  (+12 more)
scripts/: reindex.sh
(+54 files in other folders)
