[project]
name = "hustle-scale-api"
version = "1.0.0"
description = "HustleScale — The National Youth Micro-Enterprise Accelerator API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff.format]
quote-style = "double"
